@@ -3,3 +3,7 @@
 ## New Features
 
 - Song no longer downloads playback info from internet if it's already downloaded -- kaneryu on 2025-01-11
+
+## Bugfixes
+
+- Fix searchModel returning KImage living in different thread -- kaneryu on 2025-01-11
